src/app/app-routing/case-study/case-study.component.scss
@import '../../../global-variables';

.nav-background {
  background-image: url('../../../assets/office-teal-monochrome.png');
  height: 5.5vw;
}

@media only screen and (max-width: 440px) {
  .nav-background {
    height: 14vw;
  }
}

.study {

  section.case-study-header {
    margin: 8vw 0;

    h1 {
      text-align: center;
      color: $light-teal;
      font-weight: 700;
      margin-bottom: 4vw;
    }

    .hero {
      background-size: cover;
      height: 80vh;
    }
  }

  section.featured-items {
    margin: 8vw 0;

    .featured-item {
      position: relative;

      img {
        position: relative;
        top: 2vw;
        z-index: 50;
      }

      .text-box {
        padding: 2vw;
        padding-top: 3vw;
        background-color: darken($white, 5%);
        border-radius: 2vw;

        .title {
          font-size: 1.1em;
          text-align: center;
          color: $med-teal;
          font-weight: 700;
          text-transform: uppercase;
        }
      }
    }
  }

  section.design-strategy {

    .design-strategy-header {
      position: relative;
      margin: 4vw 10vw;

      img.icon {
        position: relative;
        top: 2vw;
        z-index: 50;
        display: none;
      }

      .text-box {
        padding: 2vw;
        padding-top: 3vw;
        border-radius: 2vw;

        &>.title {
          text-align: center;
          color: $light-teal;
          // font-size: 1.5em;
          font-weight: 700;
          // text-transform: uppercase;
        }

        &>.content {
          // font-size: 0.85em;
        }
      }
    }

    @media only screen and (max-width: 440px) {
      .design-strategy-header {
        margin: 0 auto;
      }
    }

    .design-strategy-details {
      margin: 4vw 0;

      .title {
        color: $med-teal;
        font-weight: 700;
      }

      .content {
        // font-size: 0.85em;
      }

      img.detail-image {
        margin-bottom: 4vw;
      }
    }
  }
}

